1.2.0
    * compatibility with mysql 0.2.X line
    * quoteing fixes
    * proper foreign keys ordering
    * views support for mysql and sqlite
1.1.3
    * switched from jeweler to bundler
    * sorting of indexes and foreign keys on schema dumper
1.1.2
    * don't quote constraint name (bugfix)
1.1.1
    * quote values for foreign key definition
1.1.0
    * standard gem layout (no more RedHillConsulting module)
    * got rid of table comments support
    * dropped Mysql4 compatibility
    * added specs regarding foreign_keys
    * added specs regarding indexes
    * fixed included module for sqlite3
1.0.9.1
    * get rid of ActiveRecord < 3.0.0 dependency
1.0.9
    * compatibility fix for mysql2 gem
1.0.8
    * handle expressions when creating indexes
    * relay on ActiveRecord add_index method when handling legacy API
1.0.7
    * support for partial indexes
1.0.6
    * Fixed case-sensitive indexes
1.0.5
    * added missing quoting
1.0.4
    * Autoloading
1.0.3
    * ActiveRecord 3.0beta compatibility
    * First ruby 1.9 fixes
1.0.2
    * added missing dependencies
1.0.1
    * improved description
1.0.0
    * added gemspec
